--- a/index.html
+++ b/index.html
@@ -110,10 +110,18 @@
                </div>
         </section> 
         <section class="subscribe">
-            <h2>Get The Latest Deals</h2>
-            <small>$30 coupon for first shopping</small>
-            <input type="text" placeholder="Enter Your mail hear">
-            <button>Subscribe</button>
+            <img src="Flower Asset/Rectangle 9.png" alt="">
+            <div class="subscribe-text">
+                <h2 class="subscribe-heading">Get The Latest Deals</h2>
+                <div class="small">
+                    <small>$30 coupon for first shopping</small>
+                </div>
+                <div class="button-type">
+                    <input class="input" type="text" placeholder="Enter Your mail hear">
+            <button class="button">Subscribe</button>
+                </div>
+            </div>
+                
         </section>
     </main>
     <footer class="footer">
